# reldplayer

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  build_docs.ps1  build_docs.sh  pyproject.toml
.github/workflows/: python-publish.yml
doc/: index.html  reldplayer.html  search.js
doc/reldplayer/: _internal.html  com.html  player.html
doc/reldplayer/_internal/: b64.html  i.html  utils.html
doc/reldplayer/com/: config.html  instanceQuick.html  rawconsole.html  sync.html  uaConnect.html  wndmgr.html
docs/: README.md  conf.py  index.rst  usage_guide.rst
docs/_static/: custom.css
docs/_templates/: navigation.html
examples/: get_specific_window.py  organize_windows.py  quit_all.py  run_multiple_instances.py
locales/zh_CN/LC_MESSAGES/: README.po  index.po  usage_guide.po
reldplayer/core/: config.py  ctx.py  player.py
reldplayer/extensions/: console.py  manage_config.py  window_auto.py
src/reldplayer/: __init__.py  autogui.py  batch_console.py  batch_selector.py  batch_window.py  console.py  main.py  metaMgr.py  player.py  quick.py  rawconsole.py  reldplayer_records  utils.py  window.py  wndMgr.py
src/reldplayer/_internal/: auto_window.py  b64.py  console_dispatch.py  i.py  utils.py  wndCtrl.py
src/reldplayer/com/: config.py  instanceQuick.py  rawconsole.py  sync.py  wndmgr.py
src/reldplayer/core/: player.py
src/reldplayer/ext/: window.py  windowCollection.py  windowMgr.py
src/reldplayer/extensions/: console.py  manage_macro.py  manage_window.py
src/reldplayer/internal/: __init__.py  iconsole.py  model_config.py  model_mps.py  model_profile_config.py  model_record.py  typedicts.py
src/reldplayer/models/: __init__.py  file.py
src/reldplayer/objs/: query.py  wnd_instance.py
src/reldplayer/overloads/: __init__.py  load.py
src/reldplayer/shell/: __init__.py
src/reldplayer/submod/: setting_gui.py
src/reldplayer/utils/: __init__.py  find_path.py  placeholder.py  screen.py  timely.py  wip.py
tests/: test_0.py  test_batch_selector.py  test_config.py  test_mps.py  test_record.py
wip/: meta.py  metamgr.py
