[project]
name = "reldplayer"
version = "0.1.1"
description = "a superset to pyldplayer"
authors = [
    { name = "ZackaryW", email = "36378555+ZackaryW@users.noreply.github.com" }
]
dependencies = [
    "psutil>=6.0.0",
    "pygetwindow>=0.0.9",
    "pyautogui>=0.9.54",
    "pywin32>=306",
    "screeninfo>=0.8.1",
    "pyldplayer>=3.0.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/reldplayer"]
