[project]
name = "reldplayer"
version = "1.0.1"
description = "a superset to pyldplayer"
authors = [
    { name = "ZackaryW", email = "36378555+ZackaryW@users.noreply.github.com" }
]
dependencies = [
    "pyldplayer>=4.1.6",
    "pygetwindow>=0.0.9",
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
reldplay = "reldplayer.shell.__init__:run"

[project.optional-dependencies]
full = [
    "psutil>=6.1.0",
    "pyautogui>=0.9.54",
    "screeninfo>=0.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "psutil>=6.1.0",
    "pyautogui>=0.9.54",
    "screeninfo>=0.8.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/reldplayer"]

[tool.ruff]
ignore = ["F401"]
